# basler-streamer

./: CMakeLists.txt
cmake/: FindpylonDataProcessing.cmake
src/: BaslerCapture.cpp  BaslerCapture.h  Receiver.cpp  Sender.cpp
